#1 style: Set menu spacing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>AirMug Pro</title>
     <link rel="stylesheet" href="css/default.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <nav class="global-nav">
+        <a href="#">Rooms</a>
+        <a href="#">Items</a>
+        <a href="#">Stores</a>
+        <a href="#">Contact</a>
+      </nav>
+      <nav class="local-nav">
+        <a href="#" class="local-nav-item">AirMug</a>
+        <a href="#">개요</a>
+        <a href="#">제품사양</a>
+        <a href="#">구입하기</a>
+      </nav>
+    </div>
+  </body>
 </html>
