--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </section>
       <section class="scroll-section" id="scroll-section-1">
-        <p>
+        <p class="description">
           <strong>보통 스크롤 영역</strong>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vero,
           ratione adipisci ea ut voluptatum placeat, repellat vitae id nemo
@@ -112,7 +112,7 @@
           veritatis provident sint libero?
         </p>
       </section>
-      <footer>2022, 손정웅</footer>
+      <footer class="footer">2022, 손정웅</footer>
     </div>
   </body>
 </html>
