--- a/index.html
+++ b/index.html
@@ -114,5 +114,6 @@
       </section>
       <footer class="footer">2022, 손정웅</footer>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
